--- a/src/components/Diploma/Layout/styles.scss
+++ b/src/components/Diploma/Layout/styles.scss
@@ -3,6 +3,10 @@
 		size: auto;
 		margin: 0mm;
 	}
+	.container {
+		width: 297mm;
+		height: calc(210mm * 2);
+	}
 }
 
 @media only screen {
@@ -21,21 +25,30 @@
 	padding: 0;
 	width: 297mm;
 	height: calc(210mm * 2);
+
 	.front {
+		overflow: hidden;
 		page-break-after: always;
-		box-sizing: border-box;
+		page-break-before: always;
 		width: 297mm;
 		height: 210mm;
+		margin: 0;
+		padding: 0;
+		background-image: url(../../../assets/imgs/diploma-icone.jpg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		margin-top: -1mm;
 
 		.content {
 			display: inline-block;
 			width: 800px;
 			text-align: center;
-			margin: 20% 0 0 20%;
+			margin: 22% 0 0 20%;
 
 			.paragraph {
 				margin: 0;
 				font-weight: 300;
+				margin-bottom: 3px;
 				font-size: 14px;
 
 				span {
@@ -48,7 +61,7 @@
 			.name {
 				text-transform: uppercase;
 				font-size: 1.8rem;
-				margin: 20px 0;
+				padding: 5px 0 0;
 				color: #ed3b48;
 			}
 			.course {
@@ -82,10 +95,13 @@
 	}
 
 	.back {
-		page-break-after: always;
+		box-sizing: border-box;
+		overflow: hidden;
 		width: 297mm;
-		height: 210mm;
-		padding: 0 5vh;
+		height: 200mm;
+		margin: 0;
+		padding: 0;
+		padding-top: 3vh;
 
 		.university {
 			margin: 0;
@@ -107,12 +123,12 @@
 		.recognized {
 			width: 100%;
 			margin-top: 20px;
-			margin-left: 20px;
+			margin-left: 5vh;
 
 			&.-small {
 				letter-spacing: 0.005rem;
 				font-size: 12px;
-				margin-top: 55px;
+				margin-top: 40px;
 			}
 		}
 		.zone {
@@ -121,16 +137,18 @@
 		}
 		.QR {
 			position: absolute;
-			bottom: 70px;
-			right: 0;
+			bottom: 15px;
+			right: 2vh;
 		}
 		.area {
 			display: inline-block;
 			border: 0.02px solid black;
-			margin-top: 80px;
-			margin-left: 20px;
-			padding: 2.5rem 2rem;
+			margin-top: 70px;
+			padding: 1.75rem 1rem;
 			text-align: left;
+			&:first-of-type {
+				margin-left: 5vh;
+			}
 			&.-name {
 				height: 50px;
 			}
@@ -142,19 +160,16 @@
 					margin: auto;
 					width: 80%;
 					border-top: 1px solid black;
-					margin-top: 50px;
+					margin-top: 35px;
 					span {
 						display: block;
 						font-weight: bold;
 					}
 					&:first-of-type {
-						margin-top: 70px;
+						margin-top: 50px;
 						margin-bottom: 15px;
 					}
 				}
-			}
-			&:first-of-type {
-				margin-bottom: 50px;
 			}
 		}
 	}
